force-app/main/default/objects/Meetup__c/fields/RegistrationCode__c.field-meta.xml
<CustomField>
    <fullName>RegistrationCode__c</fullName>
    <label>RegistrationCode</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>