force-app/main/default/objects/Meetup__c/fields/RegistrationLimit__c.field-meta.xml
<CustomField>
    <fullName>RegistrationLimit__c</fullName>
    <label>RegistrationLimit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>