force-app/main/default/objects/Meetup__c/fields/Total_Registrations__c.field-meta.xml
<CustomField>
    <fullName>Total_Registrations__c</fullName>
    <label>Total Registrations</label>
    <summaryForeignKey>MeetupRegistration__c.Meetup__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>